Updates and improvements of all classes before downgrading to Java 22 to resolve Mochito issue (Not Mocking SecureLSHIndex)